--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -197,10 +197,10 @@ input, select, textarea {
 		}
 
 			h1.major:after {
-				background-image: -moz-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -webkit-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -ms-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: linear-gradient(to right, #5e42a6, #b74e91);
+				background-image: -moz-linear-gradient(to right, #425ea6, #b74e91);
+				background-image: -webkit-linear-gradient(to right, #424fa6, #b74e91);
+				background-image: -ms-linear-gradient(to right, #4262a6, #b74e91);
+				background-image: linear-gradient(to right, #4271a6, #b74e91);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
@@ -2525,7 +2525,7 @@ input, select, textarea {
 			display: block;
 			background: #ffffff;
 			border-radius: 100%;
-			color: #312450;
+			color: #242d50;
 			text-align: center;
 			line-height: 2.5em;
 			margin: 0 0 1.3em 0;
@@ -2536,11 +2536,11 @@ input, select, textarea {
 			}
 
 				.wrapper.style1 .icon.major:before {
-					color: #5e42a6;
+					color: #4262a6;
 				}
 
 				.wrapper.style1-alt .icon.major:before {
-					color: #493382;
+					color: #334082;
 				}
 
 				.wrapper.style2 .icon.major:before {
@@ -2548,7 +2548,7 @@ input, select, textarea {
 				}
 
 				.wrapper.style2-alt .icon.major:before {
-					color: #3e4094;
+					color: #3e5694;
 				}
 
 				.wrapper.style3 .icon.major:before {
@@ -3022,7 +3022,7 @@ input, select, textarea {
 				-webkit-transition: opacity 1s ease;
 				-ms-transition: opacity 1s ease;
 				transition: opacity 1s ease;
-				background: rgba(49, 36, 80, 0.9);
+				background: rgba(36, 43, 80, 0.9);
 				content: '';
 				display: block;
 				height: 100%;
@@ -3236,27 +3236,27 @@ input, select, textarea {
 			}
 
 		.wrapper.alt {
-			background-color: #261c3e;
+			background-color: #0d0624;
 		}
 
 		.wrapper.style1 {
-			background-color: #5e42a6;
+			background-color: #182e5d;
 		}
 
 		.wrapper.style1-alt {
-			background-color: #493382;
+			background-color: #2f4681;
 		}
 
 		.wrapper.style2 {
-			background-color: #5052b5;
+			background-color: #5083b5;
 		}
 
 		.wrapper.style2-alt {
-			background-color: #3e4094;
+			background-color: #3e6394;
 		}
 
 		.wrapper.style3 {
-			background-color: #2A1F66;
+			background-color: #1f2d66;
 		}
 
 		.wrapper.style3-alt {
@@ -3370,7 +3370,7 @@ input, select, textarea {
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
-		background-color: #5e42a6;
+		background-color: #4271a6;
 		cursor: default;
 		padding: 1.75em 2em;
 	}
@@ -3524,7 +3524,7 @@ input, select, textarea {
 
 	#sidebar {
 		padding: 2.5em 2.5em 0.5em 2.5em ;
-		background: #312450;
+		background: #0d0624;
 		cursor: default;
 		height: 100vh;
 		left: 0;
@@ -3761,14 +3761,14 @@ input, select, textarea {
 			}
 
 			#sidebar nav a:before {
-				background: #3c2c62;
+				background: #1ea8d9;
 			}
 
 			#sidebar nav a:after {
-				background-image: -moz-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -webkit-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -ms-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: linear-gradient(to right, #5e42a6, #b74e91);
+				background-image: -moz-linear-gradient(to right, #329cc4, #b74e91);
+				background-image: -webkit-linear-gradient(to right, #329cc4, #b74e91);
+				background-image: -ms-linear-gradient(to right, #329cc4, #b74e91);
+				background-image: linear-gradient(to right, #329cc4, #b74e91);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
